// SPDX-License-Identifier: MIT
syntax = "proto3";
package route;

// Please see the linked file for the descriptions.
//
// https://github.com/hyperium/tonic/blob/master/examples/proto/routeguide/route_guide.proto
service RouteGuide {
	rpc GetFeature(Point) returns (Feature) {}
	rpc ListFeatures(Rectangle) returns (stream Feature) {}
	rpc RecordRoute(stream Point) returns (RouteSummary) {}
	rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
}

message Point {
	int32 latitude = 1;
	int32 longitude = 2;
}

message Rectangle {
	Point lo = 1;
	Point hi = 2;
}

message Feature {
	string name = 1;
	Point location = 2;
}

message RouteNote {
	Point location = 1;
	string message = 2;
}

message RouteSummary {
	int32 point_count = 1;
	int32 feature_count = 2;
	int32 distance = 3;
	int32 elapsed_time = 4;
}
